--- a/mods/ts/sequences/structures.yaml
+++ b/mods/ts/sequences/structures.yaml
@@ -1374,3 +1374,61 @@ gaplug2:
 
 gaplug3:
 	icon: rad3icon
+
+gafire:
+	Defaults:
+		Offset: -16, -28
+		UseTilesetCode: true
+	idle:
+		ShadowStart: 3
+	damaged-idle:
+		Start: 1
+		ShadowStart: 4
+	dead:
+		Start: 2
+		ShadowStart: 5
+		Tick: 400
+	idle-light: gtfire_c
+		Length: 6
+		ShadowStart: 5
+		Tick: 120
+	idle-generator: gtfire_b
+		Length: 16
+		ShadowStart: 16
+	poweroutage: gtfire_a
+		Start: 18
+#		Length: 20
+#		ShadowStart: 20
+	make: gtfiremk
+		Length: 16
+		ShadowStart: 16
+	icon: fsdicon
+		Offset: 0, 0
+		UseTilesetCode: false
+
+gafsdf:
+	Defaults:
+		Offset: 0, -12
+		UseTilesetCode: true
+	idle:
+		Length: 16
+#	damaged-idle:
+#		Start: 16
+#		Length: 16
+	enabled:
+		Start: 32
+		Length: 16
+#	damaged-enabled:
+#		Start: 48
+#		Length: 16
+	flash: gtfsdf_a
+		Length: 4
+		Tick: 60
+	burst: fsidle
+		Length: *
+		Offset: 0, -72
+		UseTilesetCode: false
+		BlendMode: Additive
+	icon: fspicon
+		Offset: 0, 0
+		UseTilesetCode: false
