--- a/mods/ts/sequences/structures.yaml
+++ b/mods/ts/sequences/structures.yaml
@@ -614,6 +614,58 @@ nagate_b:
 		Offset: 0, 0
 		UseTilesetCode: false
 
+napost:
+	Defaults:
+		Offset: 0, -12
+		UseTilesetCode: true
+	idle:
+		Start: 0
+		ShadowStart: 3
+	damaged-idle:
+		Start: 1
+		ShadowStart: 4
+	lights: napost_b
+		Start: 0
+		Length: 7
+		ShadowStart: 14
+		Tick: 80
+	damaged-lights: napost_b
+		Start: 7
+		Length: 7
+		ShadowStart: 21
+		Tick: 80
+	chainoflights: napost_a
+		Start: 0
+		Length: 12
+		ShadowStart: 24
+		Tick: 80
+	damaged-chainoflights: napost_a
+		Start: 12
+		Length: 12
+		ShadowStart: 36
+		Tick: 80
+	dead:
+		Start: 2
+		Tick: 400
+		ShadowStart: 5
+	make: napostmk
+		Start: 0
+		Length: 12
+		ShadowStart: 12
+	icon: lasricon
+		Offset: 0, 0
+		UseTilesetCode: false
+
+nafnce:
+	Defaults:
+		Offset: 0, -12
+	idle:
+		Frames: 8,12,8,0,12,12,0,0,8,0,8,0,0,0,0,0
+		Length: 16
+	enabled:
+		Frames: 3,5,1,8,6,4,8,8,2,8,0,8,8,8,8,8
+		Length: 16
+
 nawall:
 	Defaults:
 		Offset: 0, -12
